# ringmaster

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: 00-architecture-overview.md  01-state-machine.md  01-work-units.md  02-prompt-pipeline.md  02-worker-interface.md  03-loop-manager.md  03-prioritization.md  04-context-enrichment.md  04-integrations.md  05-data-flow.md  05-state-persistence.md  06-api-spec.md  06-deployment.md  07-database.md  07-user-experience.md  08-frontend.md  08-open-architecture.md  09-heuristic-orchestration.md  09-remaining-decisions.md  10-ux-controls.md  api-reference.md
docs/adr/: 000-template.md  001-single-rust-binary.md  002-heuristic-orchestration.md  003-multi-platform-support.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  serve-frontend-for-e2e.sh  start-backend-for-e2e.sh  vite.config.ts  vitest.config.ts
frontend/e2e/: README.md  board.spec.ts  card-interaction.spec.ts  dashboard.spec.ts  keyboard-shortcuts.spec.ts  project-crud.spec.ts  queue-priority.spec.ts  realtime-updates.spec.ts  task-management.spec.ts  worker-management.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/test-results/: .last-run.json
k8s/: README.md
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
migrations/: 001_initial_schema.sql  002_chat_history.sql  003_loop_checkpoints.sql  003_session_metrics.sql  004_logs.sql  004_session_metrics.sql  005_action_history.sql  006_worker_capabilities.sql  007_outcome_tracking.sql  008_retry_tracking.sql  009_needs_decomposition_status.sql  010_context_assembly_logs.sql  011_task_outcomes.sql  012_project_pinned.sql  013_task_iterations.sql
prompts/: PROGRESS-2.md  PROGRESS.md  cli-platform-impl.md  marathon-continuous.md  marathon-cycle-2.md  marathon-cycle.md  marathon-session-v2.md  marathon-v3-feature-completion.md  ringmaster-dev.md
prompts/.marathon/: experiments.md  run-marathon-v3.sh
prompts/exploration/: README.md
prompts/marathon-coding/: README.md  agent.md  system.md
scripts/: backup-ringmaster.sh  bootstrap-selfhost.sh  install-ringmaster.sh  restore-ringmaster.sh  worker-claude-code.sh
src/: lib.rs  main.rs  static_files.rs
src/api/: cards.rs  errors.rs  handlers.rs  integrations.rs  loops.rs  metrics.rs  mod.rs  projects.rs  routes.rs  state.rs  types.rs  websocket.rs  ws.rs
src/config/: mod.rs
src/db/: attempts.rs  cards.rs  errors.rs  mod.rs  models.rs  pool.rs  projects.rs  queries.rs
src/domain/: attempt.rs  card.rs  error.rs  mod.rs  project.rs  state.rs
src/events/: mod.rs
src/integrations/: claude.rs  config_sync.rs  hub.rs  kubernetes.rs  mod.rs
tests/: __init__.py  conftest.py  test_api.py  test_cli_worker.py  test_code_context.py  test_context_assembly_logs.py  test_creator.py  test_db.py  test_deployment_context.py  test_documentation_context.py  test_domain.py  test_e2e_hot_reload.py  test_e2e_scheduler_integration.py  test_e2e_worker_lifecycle.py  test_enrichment_pipeline_integration.py  test_events.py  test_executor.py  test_flywheel.py  test_git.py  test_live_worker.py  test_logs_context.py  test_monitor.py  test_outcome.py  test_output_buffer.py  test_priority.py  test_reasoning_bank.py  test_reload.py  test_research_context.py  test_rlm.py  test_routing.py  test_spawner.py  test_updater.py  test_validator.py  test_worker_integration.py  test_worktrees.py
(+178 files in other folders)
