[package]
name = "ringmaster"
version = "0.1.0"
edition = "2021"
description = "SDLC orchestration platform with visual Kanban and autonomous AI coding loops"
authors = ["Ringmaster Team"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# IDs and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Git operations (without OpenSSL)
git2 = { version = "0.18", default-features = false }

# HTTP client (for integrations)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Static file embedding
rust-embed = "8.2"
mime_guess = "2.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# WebSocket
tokio-tungstenite = "0.21"

# Configuration
config = "0.14"
directories = "5.0"

# Semver for version comparison
semver = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "ringmaster"
path = "src/main.rs"
