[project]
name = "ringmaster"
version = "0.1.0"
description = "Multi-Coding-Agent Orchestration Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",  # For file uploads

    # Database
    "aiosqlite>=0.19.0",

    # Serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Async utilities
    "anyio>=4.2.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",

    # Process management
    "psutil>=5.9.0",

    # TOML config
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "httpx>=0.26.0",  # For testing FastAPI
]

[project.scripts]
ringmaster = "ringmaster.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ringmaster"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # Line too long - handled by formatter
    "B008",  # Function call in default argument - standard FastAPI pattern for Query/Depends
]

[tool.ruff.lint.isort]
known-first-party = ["ringmaster"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
